# SpatialChainBenchmark

./: .gitignore  README.md  requirements.txt
eval/: eval_checkpoints_vllm.py  eval_erqa.py  eval_hf_models_vllm.py  eval_multi.py
judge/: README.md  pyproject.toml  requirements.in
judge/src/spatial_eval/: __init__.py  cli.py  generator.py  judge.py  metrics.py  normalization.py  pipeline.py  prompt_store.py  schemas.py
judge/src/spatial_eval/datasets/: __init__.py  adapters.py  base.py  batch_reasoning.py  csv_to_jsonl.py  external_to_current.py
judge/src/spatial_eval/prompts/: generator.md  generator_vision.md  judge.md
judge/src/spatial_eval/providers/: __init__.py  base.py  llm.py  ollama.py  replay.py  utils.py
notebooks/: GQA_subset_selection.ipynb
scripts/: filter_spatial_questions.py  finetune_qwen3vl4b.py
