[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-reasoning-validator"
version = "0.1.0"
description = "MVP para geração e validação de spatial reasoning com LLM-as-a-judge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
spatial-eval = "spatial_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spatial_eval = ["prompts/*.txt", "prompts/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
